0.8.0/_sources/generated/statsmodels.miscmodels.tmodel.TLinearModel.rst.txt
statsmodels.miscmodels.tmodel.TLinearModel
==========================================

.. currentmodule:: statsmodels.miscmodels.tmodel

.. autoclass:: TLinearModel

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~TLinearModel.expandparams
    
    
      ~TLinearModel.fit
    
    
      ~TLinearModel.from_formula
    
    
      ~TLinearModel.hessian
    
    
      ~TLinearModel.information
    
    
      ~TLinearModel.initialize
    
    
      ~TLinearModel.jac
    
    
      ~TLinearModel.loglike
    
    
      ~TLinearModel.loglikeobs
    
    
      ~TLinearModel.nloglike
    
    
      ~TLinearModel.nloglikeobs
    
    
      ~TLinearModel.predict
    
    
      ~TLinearModel.reduceparams
    
    
      ~TLinearModel.score
    
    
      ~TLinearModel.score_obs
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~TLinearModel.endog_names
      ~TLinearModel.exog_names
   
   