v0.10.1/_sources/generated/statsmodels.miscmodels.tmodel.TLinearModel.rst.txt
statsmodels.miscmodels.tmodel.TLinearModel
==========================================

.. currentmodule:: statsmodels.miscmodels.tmodel

.. autoclass:: TLinearModel

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         TLinearModel.expandparams
         TLinearModel.fit
         TLinearModel.from_formula
         TLinearModel.hessian
         TLinearModel.hessian_factor
         TLinearModel.information
         TLinearModel.initialize
         TLinearModel.loglike
         TLinearModel.loglikeobs
         TLinearModel.nloglike
         TLinearModel.nloglikeobs
         TLinearModel.predict
         TLinearModel.reduceparams
         TLinearModel.score
         TLinearModel.score_obs



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         TLinearModel.endog_names
         TLinearModel.exog_names

